Redirected page to [[Gentoo Wiki:Sandbox]]

--- a/Sandbox.mw
+++ b/Sandbox.mw
@@ -1,4 +1,1 @@
-'''Sandbox''' could have a variety of meanings:
-
-* [[Gentoo wiki:Sandbox]] - A "public" Gentoo Wiki testing area.
-* [[Sandbox (Portage)]] - A Portage tool for Gentoo development.
+#redirect[[Gentoo wiki:Sandbox]]
